<?xml version="1.0"?>
<package>

  <name>nautonomous_actuation_propulsion_sabertooth</name>
  <version>0.0.1</version>
  <description>The nautonomous_actuation_propulsion_sabertooth package</description>

  <maintainer email="daan.zeeuwe01@waternet.nl">Daan Zeeuwe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
